# Simulacion

./: CMakeLists.txt  README.md  condicionesInciales.h  funcionesAux.cpp  funcionesAux.hpp  main.cpp  main.h  misVectores.cpp  misVectores.h  particle.cpp  particle.h  sistema.cpp  sistema.hpp  toDoYComentarios  toDoYComentarios.md
docs/: cosas por hacer.docx  diagramaSecuencia.md  ~$sas por hacer.docx
libs/consola/: CMakeLists.txt  consola.hpp
libs/consola/src/: main.cpp  main.hpp
libs/visualizador/: CMakeLists.txt  visualizador.hpp
libs/visualizador/src/: Visualizador.cpp  Visualizador.hpp
src/: Simulator.cpp  Simulator.hpp  condicionesInciales.h  fuerza.hpp  funcionesAux.cpp  funcionesAux.hpp  main.cpp  parametrosIniciales.hpp  particle.cpp  particle.h  sistema.cpp  sistema.hpp
